--- a/resources/css/components/buttons.css
+++ b/resources/css/components/buttons.css
@@ -1,11 +1,11 @@
 @layer components {
     .btn-primary {
-        @apply bg-sky-500 hover:bg-sky-600 text-white py-3 px-3 rounded focus:outline-none w-full;
+        @apply flex-center cursor-pointer bg-sky-500 hover:bg-sky-600 text-white py-3 px-3 rounded focus:outline-none w-full;
     }
     .btn-bordered {
-        @apply border border-gray-500 rounded py-3 px-3 focus:outline-none w-full hover:bg-gray-100;
+        @apply flex-center cursor-pointer border border-gray-500 rounded py-3 px-3 focus:outline-none w-full hover:bg-gray-100;
     }
     .btn-disabled {
-        @apply bg-gray-300 cursor-not-allowed border-0 text-gray-600 hover:bg-gray-300 hover:cursor-not-allowed;
+        @apply flex-center bg-gray-300 cursor-not-allowed border-0 text-gray-600 hover:bg-gray-300 hover:cursor-not-allowed;
     }
 }
