--- a/resources/css/components/common.css
+++ b/resources/css/components/common.css
@@ -8,7 +8,8 @@
     .bg-gradient {
         background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
     }
-    .font-pacifico {
-        font-family: "Pacifico";
+    .font-lora {
+        font-family: 'Lora Sans', sans-serif;
+        font-weight: 500;
     }
 }
