--- a/resources/css/fonts.css
+++ b/resources/css/fonts.css
@@ -1,4 +1,18 @@
 @font-face {
-    font-family: "Pacifico";
-    src: url("../assets/fonts/Pacifico-Regular.ttf");
+    font-family: "Lora Sans";
+    src: url("../assets/fonts/lora-sans/Lora-Regular.ttf") format("truetype-variations");
+    font-weight: 400;
+    font-style: normal;
+}
+@font-face {
+    font-family: "Lora Sans";
+    src: url("../assets/fonts/lora-sans/Lora-Medium.ttf") format("truetype-variations");
+    font-weight: 500;
+    font-style: normal;
+}
+@font-face {
+    font-family: "Lora Sans";
+    src: url("../assets/fonts/lora-sans/Lora-Bold.ttf") format("truetype-variations");
+    font-weight: 700;
+    font-style: normal;
 }
