Implemented react-hook-forms and yup for the form validation

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -9,3 +9,5 @@
 @import './components/sidebar.css';
 @import './components/inputs.css';
 @import './components/buttons.css';
+
+@import './layouts/navbar.css';
