--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -7,7 +7,6 @@
 @import './rules.css';
 @import './components/common.css';
 @import './components/sidebar.css';
-@import './components/inputs.css';
-@import './components/buttons.css';
+@import './components/forms.css';
 
 @import './layouts/navbar.css';
