Restructured front-end part of the app, code improvements

--- a/resources/css/components/common.css
+++ b/resources/css/components/common.css
@@ -5,6 +5,9 @@
     .full-size {
         @apply w-full h-full;
     }
+    .full-screen {
+        @apply w-screen h-screen;
+    }
     .bg-gradient {
         background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
     }
