--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -3,10 +3,7 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
-@import './fonts.css';
 @import './rules.css';
-@import './components/common.css';
-@import './components/sidebar.css';
-@import './components/forms.css';
+@import './common.css';
+@import './forms.css';
 
-@import './layouts/navbar.css';
